@@ -1,9 +1,3 @@
 ## 待完善任务项
- - 模块化改造 acp 及 cloud 下各封装组建
- - jdk 9+ 版本中 spring 反射非法访问
-    临时解决方法是在启动脚本中增加如下jvm参数，待spring版本更新至5.1.0之后将会修复此问题
-```
---add-opens java.base/java.lang=ALL-UNNAMED
-```
  - 分布式调度服务
  - 增加 HTTP/2、WebSocket demo
